tests/ui/proc-macro/issue-38586.stderr
error[E0425]: cannot find value `foo` in this scope
  --> $DIR/issue-38586.rs:6:10
   |
LL | #[derive(A)]
   |          ^
   |          |
   |          not found in this scope
   |          in this derive macro expansion
   |
  ::: $DIR/auxiliary/issue-38586.rs:9:1
   |
LL | pub fn derive_a(_: proc_macro::TokenStream) -> proc_macro::TokenStream {
   | ---------------------------------------------------------------------- in this expansion of `#[derive(A)]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
